# OSISP4_TextSorter

./: .gitignore  CMakeLists.txt  input.txt  main.cpp
queueTask/: QueueTask.h
queueTaskExcecutorService/: QueueTaskExecutorService.cpp  QueueTaskExecutorService.h
synchronizedQueue/: SynchronizedQueue.cpp  SynchronizedQueue.h
threadPoolTaskService/: ThreadPoolTaskService.cpp  ThreadPoolTaskService.h
